2009-10-26  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Build fix for shared libmatchbox on x86.

	* src/export.map:
	  Export hd_dbus_tklock_on, which is referenced by libmatchbox now.

2009-10-26  Laszlo Pere  <lpere@blumsoft.eu>

	Fixes: NB#131835 - Not able to open the notifications when the app 
	menu is up.
	* src/mb/hd-note.c, src/mb/hd-wm.[ch]: Closing the menu when clicked on
	  a HdNote.

2009-10-26  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/util/hd-dbus.c (hd_dbus_system_bus_signal_handler): Add a global
	variable hd_dbus_tklock_on for libmatchbox2 (you need also recent MB2
	for the whole bug fix). Related to NB#137523 - Browser causes X damage
	events when not visible - tk unlock case

	Patch from Laszlo to plug a leak when discarding infobanners in DND.

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_map_notify): XFree the DND
	property when discarding an infobanner.

	Release 2.2.109-1

	* src/util/hd-transition.c (on_close_timeline_new_frame): Fix a
	Coverity warning.

	* src/mb/hd-comp-mgr.c (hd_comp_mgr_unmap_notify): Fix 'break' in
	wrong line in the possibly-move-back-to-non-composited-mode branch,
	spotted by Coverity.

2009-10-23  Kimmo Hämäläinen <kimmo.hamalainen@nokia.com>

	* src/home/hd-home.c (root_window_client_message): Don't create the
	screenshot if it's already there. This is the intended semantics as
	applications can use the libhildon API to remove the screenshot when
	they need to refresh it.

2009-10-23 Gordon Williams <gordon.williams@collabora.co.uk>

	Fixes: NB#144076 - Home View Panning unresponsive
	* src/home/hd-home-view-container.c: Allow the home view to be dragged
	  while an animation for view panning is in progress.

2009-10-22  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Regression fix.

	* src/util/hd-transition.c:
	  Automatically reload transitions.ini whenever it changes again.

2009-10-22  Adam Endrodi  <adam.endrodi@blumsoft.eu>

	Plug.

	* src/launcher/hd-launcher-grid.c (hd_launcher_grid_allocate,